compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_rest_bits_unaligned.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1573
expression: "\npub fn go(x) {\n  case x {\n    <<_:5, b:bits>> -> b\n    _ -> x\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<_:5, b:bits>> -> b
    _ -> x
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySlice } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize >= 5) {
    let b = bitArraySlice(x, 5);
    return b;
  } else {
    return x;
  }
}
