compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_rest_bytes.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1523
expression: "\npub fn go(x) {\n  case x {\n    <<_, b:bytes>> -> b\n    _ -> x\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<_, b:bytes>> -> b
    _ -> x
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySlice } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize >= 8 && (x.bitSize - 8) % 8 === 0) {
    let b = bitArraySlice(x, 8);
    return b;
  } else {
    return x;
  }
}
