compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_signed.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 600
expression: "\npub fn go(x) {\n  case x {\n    <<a:signed>> -> a\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<a:signed>> -> a
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToInt } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize === 8) {
    let a = bitArraySliceToInt(x, 0, 8, true, true);
    return a;
  } else {
    return 1;
  }
}
