compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_sized_constant_pattern.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 525
expression: "\npub fn go(x) {\n  case x {\n    <<1234:16, 123:8>> -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<1234:16, 123:8>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (
    x.bitSize >= 16 &&
    x.byteAt(0) === 4 && x.byteAt(1) === 210 &&
    x.bitSize === 24 &&
    x.byteAt(2) === 123
  ) {
    return 1;
  } else {
    return 2;
  }
}
